# Telegram_bot

./: Dockerfile  bot_auxiliar.py  docker-compose.yml  install.txt  pyproject.toml  telegram_bot.py
Model/: Dockerfile  init.sql
Pictures/: CSVFILE.csv  DATAMAP.csv
Telehram_bot/: pyproject.toml
crud/: __init__.py  crud_last_user_position.py  crud_measurement.py  crud_member.py  crud_recommendation.py
db/: session.py
docs/: index.html
models/: last_user_position.py
schemas/: Member.py  last_user_position.py
telegram_bot/: pyproject.toml
